# NEXT_E_M

./: CMakeLists.txt  main.cpp
hik_camera/: HikCam.cpp
hik_camera/include/: HikCam.hpp
include/: ARMOUR.h  Kalman_filtering.h  ROBOT.h  SERIAL.h
src/: ARMOUR.cpp  Kalman_filtering.cpp  ROBOT.cpp  SERIAL.cpp
